# GAME-BOY-DMG-HDMI-TVOut

./: CMakeLists.txt  LICENSE  README.md  gdbinit
.github/: FUNDING.yml
.github/workflows/: build-release.yml
apps/: CMakeLists.txt
apps/esp32_phomemo_bridge/: README.md  platformio.ini
apps/esp32_phomemo_bridge/src/: main.cpp
apps/gameboy_dvi/: CMakeLists.txt  colors.h  main.c  print_bridge.c  print_bridge.h  print_frame_jp.h  print_header_retroconce.h  splash.h  video_capture.pio  video_defs.h
assets/: .gitattributes
docs/: bluetooth_printing.md
include/: common_dvi_pin_configs.h
libdvi/: CMakeLists.txt  dvi.c  dvi.h  dvi_config_defs.h  dvi_serialiser.c  dvi_serialiser.h  dvi_serialiser.pio  dvi_timing.c  dvi_timing.h  tmds_encode.S  tmds_encode.c  tmds_encode.h  tmds_encode_1bpp.pio  tmds_table.h  tmds_table_fullres.h  tmds_table_gen.py  util_queue_u32_inline.h
libgui/: GUI_Paint.c  GUI_Paint.h
libsprite/: CMakeLists.txt  affine_transform.h  sprite.S  sprite.c  sprite.h  sprite_asm_const.h  tile.S  tile.c  tile.h
scripts/: packtiles  tmdsdump.py  tmdsfont
web/esp32-phomemo-bridge/: index.html
